# dg

./: .gitignore  Cargo.toml  README.md  dictionary.json  result.txt
src/: main.rs
