[package]
name = "dg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true

[dependencies]
reqwest = { version= "0.11", features= ["json", "blocking"]} 
serde = { version= "1.0.148", features= ["derive"] } 
serde_json = "1.0.88"
syn = "1.0.104"
