[package]
name = "dg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true

[dependencies]
miniserde = "0.1.42"
minreq = { version = "2.13.3", features = ["https"] }
